# research

./: .gitignore  LICENSE  README.md  decentralized_ai_ billing_agent.md
agent/: AI_Billing_Agent_Pipeline.md  Research_Roadmap.md  manta.md
agent/sample_code/webhook/: .gitignore  developer_server.py  mock_mission_request.py  readme.md  webhook_server.py
docs/research/: README.md
sample_code/billing_and_webhooks/team_billing/: .dockerignore  app.db  readme.md  server.py  test_server.py
sample_code/billing_and_webhooks/webhook/: readme.md
sample_code/blockchain/: eth_helper.py  requirements.txt
sample_code/blockchain_and_storage/blockchain/: README.md
sample_code/blockchain_and_storage/mcp_nebula_block/: Dockerfile  README.md  pyproject.toml
sample_code/blockchain_and_storage/mcp_nebula_block/src/mcp_server_nebula_block/: server.py
sample_code/blockchain_and_storage/nebula_block_storage/: README.md  requirements.txt  sample_env
sample_code/lllm_perfomance/: DATABASE_FILE_GUIDE.md  GPU_SETTINGS_GUIDE.md  MODEL_SETTINGS_README.md  README.md  database.py  excel_to_models.py  gpu_profit_calculator.py  gpu_profit_calculator_clean.py  init_database.py  llm_valuation.py  populate_real_tps.py  update_model_pricing.py  update_openrouter_pricing.py
sample_code/llm_perfomance/: .dockerignore  README.md  llm_calculator.db  requirements.txt
sample_code/nebula_block_storage/: README.md  config.py  nebula_block_example.py
sample_code/team_billing/: Dockerfile  readme.md  requirements.txt
sample_code/webhook/: .gitignore  webhook_server.py
(+20 files in other folders)
